--- a/Prj02_DWeather/app/src/main/res/layout/top_bar.xml
+++ b/Prj02_DWeather/app/src/main/res/layout/top_bar.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="horizontal"
-              android:layout_width="match_parent"
-              android:layout_height="34dp"
-              android:background="#FFF">
+<LinearLayout
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="34dp"
+    android:background="#FFF"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
         <Button
             android:layout_width="wrap_content"
@@ -15,13 +16,25 @@
             android:textSize="20sp"
             android:background="#0000"/>
 
-        <TextView
+        <View
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:background="#0000"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:id="@+id/top_title"
             android:textSize="20sp"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:layout_gravity="center"/>
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="#0000"/>
 
         <Button
             android:layout_width="wrap_content"
