--- a/Prj02_DWeather/app/src/main/res/layout/fg_main.xml
+++ b/Prj02_DWeather/app/src/main/res/layout/fg_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
@@ -7,16 +8,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:ignore="UselessParent">
 
         <!-- 主体部分 -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="20dp"
+            android:layout_margin="20dp"
             android:background="#FFF">
 
 
@@ -26,30 +26,33 @@
                 android:id="@+id/img_weather"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="10dp"
-                android:layout_gravity="center"/>
+                android:layout_gravity="center"
+                tools:ignore="ContentDescription"/>
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="8dp"
                 android:layout_marginTop="8dp"
-                android:layout_gravity="center">
+                android:gravity="center">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:id="@+id/txt_wether"
+                    android:text="@string/blank"
                     android:textSize="30sp"
-                    android:gravity="center"
-                    android:paddingRight="10dp"/>
+                    android:paddingStart="0dp"
+                    android:paddingEnd="10dp"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
-                    android:paddingRight="10dp"
+                    android:paddingStart="0dp"
+                    android:paddingEnd="10dp"
                     android:id="@+id/txt_degree"
-                    android:gravity="center"
+                    android:text="@string/blank"
                     android:textSize="30sp"/>
 
                 <View
@@ -61,31 +64,73 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:paddingLeft="10dp"
+                    android:paddingStart="10dp"
+                    android:paddingEnd="0dp"
                     android:orientation="vertical">
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="20dp"
+                        android:text="@string/blank"
                         android:id="@+id/txt_today_wt"/>
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="20dp"
+                        android:text="@string/blank"
                         android:id="@+id/txt_today_tmp"/>
 
                 </LinearLayout>
 
             </LinearLayout>
 
+
+
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:layout_gravity="center"
+                android:gravity="center"
                 android:id="@+id/update_time"
+                android:text="@string/blank"
                 android:textSize="10sp"
-                android:textColor="#c7c7c7"/>
+                android:textColor="#c7c7c7"
+                tools:ignore="SmallSp"/>
+
+        </LinearLayout>
+
+        <!-- 其他天气信息 -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:background="#FFF"
+            android:padding="10dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="20dp"
+                android:text="@string/blank"
+                android:textSize="12sp"
+                android:id="@+id/aqi_describe"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="20dp"
+                android:text="@string/blank"
+                android:textSize="12sp"
+                android:id="@+id/wind_describe"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="end"
+                android:text="@string/blank"
+                android:textSize="12sp"
+                android:id="@+id/hum"/>
 
         </LinearLayout>
 
@@ -93,7 +138,7 @@
 
         <com.dstudio.wd.dweather.ListViewInScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:id="@+id/daily_list"
             android:layout_marginTop="20dp"
             android:focusable="true"/>
@@ -116,7 +161,7 @@
             android:textSize="12sp"
             android:textColor="#bababa"
             android:padding="5dp"
-            android:gravity="right"/>
+            android:gravity="end"/>
 
     </LinearLayout>
 
