--- a/Prj02_DWeather/app/src/main/res/values/styles.xml
+++ b/Prj02_DWeather/app/src/main/res/values/styles.xml
@@ -21,4 +21,11 @@
         <item name="android:textColor">#b4b4b4</item>
     </style>
 
+    <style name="FullscreenTheme" parent="AppTheme">
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowBackground">@drawable/background</item>
+    </style>
+
 </resources>
