--- a/Prj01_ONE/app/src/main/res/layout/activity_main.xml
+++ b/Prj01_ONE/app/src/main/res/layout/activity_main.xml
@@ -29,10 +29,24 @@
         android:layout_weight="1"
         android:id="@+id/scroll_view">
 
-        <FrameLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/fram_layout"/>
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:id="@+id/blank_space"
+                android:visibility="gone"
+                android:background="@color/colorAccent"/>
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/fram_layout"/>
+
+        </LinearLayout>
 
     </ScrollView>
 
