--- a/Prj01_ONE/app/src/main/res/values/colors.xml
+++ b/Prj01_ONE/app/src/main/res/values/colors.xml
@@ -11,4 +11,7 @@
 
     <color name="btn_normal">#a9b7b7</color>
     <color name="btn_picked">#33475f</color>
+
+    <color name="transparent">#0000</color>
+    <color name="white">#FFF</color>
 </resources>
