--- a/Prj02_DWeather/app/src/main/res/layout/aqi_layout.xml
+++ b/Prj02_DWeather/app/src/main/res/layout/aqi_layout.xml
@@ -2,6 +2,7 @@
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="5dp"
     android:layout_marginTop="20dp"
@@ -12,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:paddingBottom="5dp"
+        android:layout_marginBottom="5dp"
         android:orientation="horizontal">
 
         <TextView
@@ -34,7 +35,9 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:id="@+id/txt_qlty"
-            android:paddingLeft="10dp"
+            android:layout_marginStart="8dp"
+            android:paddingStart="3dp"
+            android:paddingRight="3dp"
             style="@style/title_weather"/>
 
 
