--- a/Prj02_DWeather/app/src/main/res/layout/content_layout.xml
+++ b/Prj02_DWeather/app/src/main/res/layout/content_layout.xml
@@ -13,12 +13,23 @@
         android:layout_height="0.5dp"
         android:background="#b6b6b6"/>
 
+    <!--
     <ProgressBar
         android:layout_width="match_parent"
         android:layout_height="20dp"
         android:paddingTop="5dp"
         android:id="@+id/progress_bar"
-        android:visibility="gone"/>
+        android:visibility="gone"/>  -->
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="正在更新..."
+        android:textSize="10sp"
+        android:gravity="center"
+        android:padding="2dp"
+        android:visibility="invisible"
+        android:id="@+id/updating"/>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -29,12 +40,10 @@
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:id="@+id/frag_layout">
         </FrameLayout>
 
     </ScrollView>
-
-
 
 </LinearLayout>
