--- a/Prj02_DWeather/app/src/main/res/layout/fg_main.xml
+++ b/Prj02_DWeather/app/src/main/res/layout/fg_main.xml
@@ -17,9 +17,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_margin="20dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="20dp"
             android:background="#FFF">
-
 
             <ImageView
                 android:layout_width="280dp"
@@ -65,6 +67,7 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
+
                     android:paddingStart="10dp"
                     android:paddingEnd="0dp"
                     android:orientation="vertical">
@@ -84,8 +87,6 @@
                 </LinearLayout>
 
             </LinearLayout>
-
-
 
             <TextView
                 android:layout_width="match_parent"
@@ -137,7 +138,7 @@
 
         <!-- 7日天气 -->
 
-        <com.dstudio.wd.dweather.ListViewInScrollView
+        <com.dstudio.wd.dweather.tools.ListViewInScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/daily_list"
@@ -148,7 +149,7 @@
         <include layout="@layout/aqi_layout"/>
 
         <!-- 生活指数 -->
-        <com.dstudio.wd.dweather.ListViewInScrollView
+        <com.dstudio.wd.dweather.tools.ListViewInScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/list_sug"
