--- a/Prj02_DWeather/app/src/main/res/layout/activity_splash.xml
+++ b/Prj02_DWeather/app/src/main/res/layout/activity_splash.xml
@@ -15,7 +15,7 @@
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_gravity="center"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="140dp"
         android:layout_marginBottom="20dp"
         android:src="@drawable/icon"/>
     
@@ -29,6 +29,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="气象数据由和风天气提供"
-        android:textSize="12sp"/>
+        android:textSize="10sp"
+        android:textColor="#9b9a9a"/>
 
 </LinearLayout>
