--- a/Prj01_ONE/app/src/main/res/values/colors.xml
+++ b/Prj01_ONE/app/src/main/res/values/colors.xml
@@ -1,17 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#a7a7a7</color>
-    <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#ffffff</color>
+    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorAccent">#35aeff</color>
 
-    <color name="titleColor">#333333</color>
-    <color name="contentColor">#5A5A5A</color>
-
-    <color name="black_overlay">#66000000</color>
-
-    <color name="btn_normal">#a9b7b7</color>
-    <color name="btn_picked">#33475f</color>
-
-    <color name="transparent">#0000</color>
-    <color name="white">#FFF</color>
+    <color name="contentColor">#333333</color>
 </resources>
