--- a/Prj02_DWeather/app/src/main/res/layout/aqi_layout.xml
+++ b/Prj02_DWeather/app/src/main/res/layout/aqi_layout.xml
@@ -5,7 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="5dp"
-    android:layout_marginTop="20dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="10dp"
     android:background="#FFF"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
