--- a/Prj02_DWeather/app/src/main/res/layout/fg_main.xml
+++ b/Prj02_DWeather/app/src/main/res/layout/fg_main.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              >
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,149 +13,203 @@
         android:orientation="vertical"
         tools:ignore="UselessParent">
 
+
         <!-- 主体部分 -->
-        <LinearLayout
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginTop="5dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="20dp"
             android:background="#FFF">
 
-            <ImageView
-                android:layout_width="280dp"
-                android:layout_height="280dp"
-                android:id="@+id/img_weather"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="10dp"
-                android:layout_gravity="center"
-                tools:ignore="ContentDescription"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="280dp"
+                    android:layout_height="280dp"
+                    android:id="@+id/img_weather"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_gravity="center"
+                    tools:ignore="ContentDescription"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginTop="8dp"
+                    android:gravity="center">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:id="@+id/txt_wether"
+                        android:text="@string/blank"
+                        android:textSize="30sp"
+                        android:paddingStart="0dp"
+                        android:paddingEnd="10dp"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:paddingStart="0dp"
+                        android:paddingEnd="10dp"
+                        android:id="@+id/txt_degree"
+                        android:text="@string/blank"
+                        android:textSize="30sp"/>
+
+                    <View
+                        android:layout_width="0.5dp"
+                        android:layout_height="match_parent"
+                        android:background="#b1b1b1"
+                        android:layout_gravity="center_horizontal"/>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+
+                        android:paddingStart="10dp"
+                        android:paddingEnd="0dp"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="20dp"
+                            android:text="@string/blank"
+                            android:id="@+id/txt_today_wt"/>
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="20dp"
+                            android:text="@string/blank"
+                            android:id="@+id/txt_today_tmp"/>
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:gravity="center"
+                    android:id="@+id/update_time"
+                    android:text="@string/blank"
+                    android:textSize="10sp"
+                    android:textColor="#c7c7c7"
+                    tools:ignore="SmallSp"/>
+
+            </LinearLayout>
+
+
+
+        </android.support.v7.widget.CardView>
+
+        <!-- 其他天气信息 -->
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:gravity="center"
+            android:background="#FFF">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="horizontal"
-                android:layout_marginBottom="8dp"
-                android:layout_marginTop="8dp"
+                android:padding="10dp"
                 android:gravity="center">
 
                 <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="40dp"
-                    android:id="@+id/txt_wether"
+                    android:layout_height="match_parent"
+                    android:layout_marginEnd="20dp"
                     android:text="@string/blank"
-                    android:textSize="30sp"
-                    android:paddingStart="0dp"
-                    android:paddingEnd="10dp"/>
+                    android:textSize="12sp"
+                    android:id="@+id/aqi_describe"/>
 
                 <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="40dp"
-                    android:paddingStart="0dp"
-                    android:paddingEnd="10dp"
-                    android:id="@+id/txt_degree"
-                    android:text="@string/blank"
-                    android:textSize="30sp"/>
-
-                <View
-                    android:layout_width="0.5dp"
                     android:layout_height="match_parent"
-                    android:background="#b1b1b1"
-                    android:layout_gravity="center_horizontal"/>
+                    android:layout_marginEnd="20dp"
+                    android:text="@string/blank"
+                    android:textSize="12sp"
+                    android:id="@+id/wind_describe"/>
 
-                <LinearLayout
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-
-                    android:paddingStart="10dp"
-                    android:paddingEnd="0dp"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="20dp"
-                        android:text="@string/blank"
-                        android:id="@+id/txt_today_wt"/>
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="20dp"
-                        android:text="@string/blank"
-                        android:id="@+id/txt_today_tmp"/>
-
-                </LinearLayout>
+                    android:gravity="end"
+                    android:text="@string/blank"
+                    android:textSize="12sp"
+                    android:id="@+id/hum"/>
 
             </LinearLayout>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:gravity="center"
-                android:id="@+id/update_time"
-                android:text="@string/blank"
-                android:textSize="10sp"
-                android:textColor="#c7c7c7"
-                tools:ignore="SmallSp"/>
 
-        </LinearLayout>
-
-        <!-- 其他天气信息 -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center"
-            android:background="#FFF"
-            android:padding="10dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginEnd="20dp"
-                android:text="@string/blank"
-                android:textSize="12sp"
-                android:id="@+id/aqi_describe"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginEnd="20dp"
-                android:text="@string/blank"
-                android:textSize="12sp"
-                android:id="@+id/wind_describe"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="end"
-                android:text="@string/blank"
-                android:textSize="12sp"
-                android:id="@+id/hum"/>
-
-        </LinearLayout>
+        </android.support.v7.widget.CardView>
 
         <!-- 7日天气 -->
 
-        <com.dstudio.wd.dweather.tools.ListViewInScrollView
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/daily_list"
-            android:layout_marginTop="20dp"
-            android:focusable="true"/>
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="20dp">
 
-        <!-- 空气指数 -->
-        <include layout="@layout/aqi_layout"/>
+            <com.dstudio.wd.dweather.tools.ListViewInScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/daily_list"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:focusable="true"/>
+
+        </android.support.v7.widget.CardView>
+
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="20dp">
+
+            <!-- 空气指数 -->
+            <include layout="@layout/aqi_layout"/>
+
+        </android.support.v7.widget.CardView>
+
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="20dp">
+
+            <com.dstudio.wd.dweather.tools.ListViewInScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/list_sug"
+                android:background="#0000"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"/>
+
+        </android.support.v7.widget.CardView>
+
+
 
         <!-- 生活指数 -->
-        <com.dstudio.wd.dweather.tools.ListViewInScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/list_sug"
-            android:background="#0000"
-            android:layout_marginTop="20dp"/>
+
 
         <TextView
             android:layout_width="match_parent"
