--- a/Prj03_One2.0/app/src/main/res/layout/activity_about.xml
+++ b/Prj03_One2.0/app/src/main/res/layout/activity_about.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".activity.EssayActivity">
+    android:fitsSystemWindows="true"
+    tools:context="com.dstudio.wd.one.activity.AboutActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -23,6 +24,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_essay"/>
+    <include layout="@layout/content_about"/>
 
 </android.support.design.widget.CoordinatorLayout>
