--- a/Prj03_One2.0/app/src/main/res/layout/fragment_month.xml
+++ b/Prj03_One2.0/app/src/main/res/layout/fragment_month.xml
@@ -6,7 +6,7 @@
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
-                tools:context="com.dstudio.wd.one.MonthActivity$PlaceholderFragment">
+                tools:context=".activity.MonthActivity$PlaceholderFragment">
 
     <TextView
         android:id="@+id/section_label"
