--- a/Prj03_One2.0/app/src/main/res/menu/activity_main_drawer.xml
+++ b/Prj03_One2.0/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <group android:checkableBehavior="single">
+    <group android:id="@+id/nav_main">
         <item
             android:id="@+id/nav_detail"
             android:icon="@drawable/ic_menu_home"
@@ -18,17 +18,19 @@
 
     </group>
 
-    <item android:title="Communicate">
-        <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share"/>
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send"/>
-        </menu>
-    </item>
+    <group android:id="@+id/nav_other"
+        android:menuCategory="container">
+
+        <item
+            android:id="@+id/nav_setting"
+            android:icon="@drawable/ic_settings_black_24dp"
+            android:title="选项"/>
+
+        <item
+            android:id="@+id/nav_share"
+            android:icon="@drawable/ic_menu_share"
+            android:title="分享此应用"/>
+
+    </group>
 
 </menu>
