--- a/Prj03_One2.0/app/src/main/res/layout/content_about.xml
+++ b/Prj03_One2.0/app/src/main/res/layout/content_about.xml
@@ -9,12 +9,12 @@
               tools:showIn="@layout/activity_about">
 
     <ImageView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
         android:src="@drawable/loading"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center_horizontal"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -22,5 +22,16 @@
         android:text="@string/app_ver"
         android:textSize="20sp"
         android:gravity="center_horizontal"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:layout_marginBottom="10dp"
+        android:text="@string/app_text"
+        android:textColor="#b4b4b4"
+        android:textSize="12sp"
+        android:gravity="bottom|center_horizontal"
+        />
 
 </LinearLayout>
